resource/theme/default/css/default.css
*, html {
	margin: 0px;
	padding:0px;
	font-family: "Helvetica Neue", HelveticaNeue, Helvetica, "Microsoft YaHei", "微软雅黑";
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

html {
	height: 100%;
	position: 'relative';
}

body {
	position: 'relative';
	overflow: auto;
	height: 100%;
}

a {
	text-decoration: none;
}
/* unset bs3 setting */
.modal-open {
	overflow: auto;
}

body.modal-open[style] {
	padding-right: 0px !important;
}

.loading {
	/*display: none;*/
}

.loading img {
	width: 50px;
	height: 50px;
	position: relative;
	left: 50%;
	margin-left: -25px;
	margin-top: 100px;
	margin-bottom: 100px;
}

.green{
	color: #54ab99;
}

.font_color_333 {
	color: #333333;
}

.font_color_666{
	color: #666666;
}

.font_color_999{
	color: #999999;
}

.font_size_12{
	font-size: 12px;
}

.font_size_14 {
	font-size: 14px;
}

.font_size_16{
	font-size: 16px;
}

.float_left {
	float: left;
}

.float_right {
	float: right;
}

.btn-default, .btn-reset, .btn-submit{
	margin-top: 10px;
	padding: 10px 15px 10px 15px;
	color:#ffffff;
	border: none;
	margin-right: 15px;
	font-size: 16px;
	box-shadow: 1px 1px 2px #888888;
	cursor: pointer;
}

.btn-reset{
	background-color: rgb(255, 51, 153);
}

.btn-submit{
	background-color: rgb(0, 171, 230);
}

.border_bottom_grey{
	border-bottom: 1px solid #eeeeee;
}

/* shadow layer start*/
.baseLayer{
	width:100%;
	height:100%;
	z-index: 600;
	overflow: scroll;
	position: fixed;
	color:#666666;
	font-size: 14px;
	line-height: 24px;
}

.shadowLayer{
	height: 100%;
	background-color: #000000;
	opacity: 0.85;
}

#generalPopup{
	background-color: red;
	width: 200px;
	height: 700px;
	z-index: 700;
	position: fixed;
}

.shadowWrapper{
	width:100%;
	height:100%;
	z-index: 600;
	overflow: scroll;
	position: fixed;
	display: none;
}
/* shadow layer end*/

/* popup start*/
.closeBanner{
	width:100%;
	height:50px;
}

.closeButton{
	font-size: 22px;
	line-height: 40px;
	float: left;
	color: #ffffff;
	cursor: pointer;
	z-index:650;
}

.baseLayer #imgTitle{
	background:none;
	color: #ffffff;
	height:50px;
	line-height: 50px;
	font-size: 22px;
	padding-top:0px;
	padding-bottom: 0px;
}

.baseLayer input{
	font-size: 22px;
	line-height: 50px;
	color:#ffffff;
	border:0px;
	background:none;
	height: 50px;
	max-width: 450px;
	width: 85%;
}
.baseLayer input:focus{
	color: #ff0;
}

#imgText textarea{
	margin-top: 10px;
	border: none;
	height:220px;
	width: 100%;
	color:#666666;
	font-size: 14px;
	line-height: 24px;
}

#imgBox #authorBox{
	text-align: right;
	position: absolute; 
	bottom: 10px;
	right: 10px;
	color: #ffffff;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
	font-size: 11px;
	line-height: 13px;
	z-index: 660;
	opacity: 0.5;
}

.popupImg{
	padding: 15px 30px 30px 30px;
	background-color: #f9f9f9;
	height: auto;
	width: 964px;
	margin-left: calc(50% - 512px);
	text-align:  justify;
	
}

#popImgBox{
	position: relative;
	-moz-border-radius: 0px;
	-webkit-border-radius: 3px 3px 0px 0px;
	border-radius: 3px 3px 0px 0px; 
	z-index: 610;
}

#popImgText{
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px 0px 3px 3px ;
	border-radius: 0px 0px 3px 3px ; 
	margin-bottom: 50px;
}

#popImgDescription{
	margin-top: 20px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px ;
	border-radius: 3px ; 
}

@media only screen and (max-width: 1280px) {
	.popupImg{
		width: 900px;
		margin-left: calc(50% - 512px);
	}
}


@media only screen and (max-width: 1024px) {
	.popupImg{
		width: calc(100% - 160px);
		margin-left: 50px;
	}
}

@media only screen and (max-width: 768px) {
	.popupImg{
		width: calc(100% - 130px);
		margin-left: 35px;
	}
}

@media only screen and (max-width: 512px) {
	.popupImg{
		width: calc(100% - 100px);
		margin-left: 20px;
	}
}

@media only screen and (max-width: 420px) {
	.popupImg{
		width: calc(100% - 66px);
		margin-left: 0px;
	}
}

/* popup end*/

/* header nav start*/

.headerNav {
	margin-left: 7%;
	width: 86%;
	color: #ffffff;
	font-size: 22px;
	height: 50px;
	line-height: 50px;
	position: fixed;
	z-index: 500;
}

.headerNav span {
	margin: 0px 20px 0px 20px;
}

@media only screen and (max-width: 400px) {
	.headerNav span {
		margin: 0px 10px 0px 10px;
	}

}

@media only screen and (max-width: 1024px) {
	.headerNav {
		width: 100%;
		margin-left: 0px;
	}

}

.headerNavBackground {
	opacity: 0.9;
	background-color: #222;
	width: 100%;
	height: 50px;
	position: fixed;
	left: 0px;
	top: 0px;
	z-index: 499;
}

/* header nav end*/

/* poster start*/

.poster {
	/*background-image: url("../img/header.jpg");*/
	background-image: url("../img/8206-8.jpg");
	background-repeat: no-repeat;
	height: 620px;
	width: 100%;
}

/* poster end*/



/* text container section start*/
.fake_textSection {
	opacity: 0;
	position: absolute;
	text-align: center;
	height: 50px;
	width: 84%;
	margin-left: 7%;
	top: 0px;
}

.textSection {
	position: absolute;
	text-align: center;
	height: auto;
	width: 84%;
	margin-left: 7%;
	top: 640px;
	padding-bottom: 70px;
}

.textSection .large {
	width: calc(100% - 40px);
	margin: 0px 20px 0px 20px;
	font-size: 33px;
	line-height: 50px;
}

.textSection .small {
	line-height: 26px;
	font-size: 18px;
	width: 600px;
	position: relative;
	left: 50%;
	margin-left: -300px;
}

@media only screen and (max-width: 600px) {
	.textSection .small {
		width: calc(100% - 40px);
		left: 0px;
		margin: 0px 20px 0px 20px;
	}

}

@media only screen and (max-width: 1024px) {
	.textSection {
		width: 100%;
		margin-left: 0px;
	}

}

/* text container section end*/

/* img nav container section start*/
.imgNavContainer {
	width: 100%;
	height: 50px;
	margin: 0px;
	padding: 0px;
	/*top is determined by every page*/
	position: absolute;

}

.imgNavContainerBackground {
	opacity: 0.9;
	background-color: #fdfdfd;
	z-index: 497;
}

.imgNavContainerForeground {

	height: 49px;
	border-top: solid 1px #efefef;
	box-shadow: 0px 1px 2px #ededed;
	z-index: 498;
}

.linkContainer {
	position: relative;
	/*background-color: red;*/
}

.imgNavContainer li {
	/*background-color: #54ab99;*/
	color: #666666;
	display: inline-block;
	font-size: 16px;
	line-height: 46px;
	height: 50px;
	border: 0px;
	padding-left: 30px;
	padding-right: 30px;
	max-width: 320px;
	overflow: hidden;
	cursor: pointer;
}



.imgNavContainerForeground .active {
	height: 46px;
	color: rgb(0, 171, 230);
	border-bottom: solid 4px;
}

/* img nav container section end*/

/* image grid container section start*/
.bodySection {
	/*test height*/
	/*height: 1500px;*/
	width: 100%;
	overflow: hidden;
	position: absolute;
	background-color: #f9f9f9;
}

/* image grid container section end*/

/* image group section start*/

.imgGroup {
	width: 96%;
	margin-left: 2%;
	position: relative;
}

.pagingBanner{
	width: calc(96% - 10px);
	margin-left: 2%;
	padding:5px;
	margin-top: 20px;
	position: relative;
}

@media only screen and (max-width: 1024px) {
	.pagingBanner{
		width: calc(100% - 4px);
		margin-left: 2px;
	}
}

.pagingBanner a {
	font-size: 14px;
	background-color: #ffffff;
	border:1px solid #dddddd;
	padding: 10px 15px 10px 15px;
	color: #666666;
	line-height: 23px;
	margin-left:-1px;
}

.pagingBanner .start{
	-moz-border-radius: 0px;
	-webkit-border-radius: 3px 0px 0px 3px;
	border-radius: 3px 0px 0px 3px; 
}

.pagingBanner .end{
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px 3px 3px 0px;
	border-radius: 0px 3px 3px 0px;
}

.pagingBanner .active{
	padding: 10px 15px 10px 15px;
	color: rgb(0, 171, 230);
	font-size: 14px;
}

.pagingBanner a:hover {
	border:1px solid #dddddd;
	color: rgb(0, 171, 230);
	background-color: #eeeeee;
}

.footer{
	width: 100%;
	margin-top:45px;
	background-color: #FFFFFF;
	min-height: 220px;
	border-top: 1px solid #ededed;
}

.imgThumbBox {
	display:none; 
	cursor:pointer;
	position: absolute; 
	box-shadow: 1px 1px 5px #999999;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	background-position: center;
}

@media only screen and (max-width: 1024px) {
	.imgGroup {
		width: calc(100% - 6px);
		margin-left: 3px;
		position: relative;
	}

	.footer{
		margin-top:25px;
	}
}



/* image group section end*/




/*pop up box*/

.hideImgId {
	width:0px;
	height:0px;
	overflow: hidden;
}

#popImgBox {
	height:500px;
	/*background-image:url("../img/loading.gif");*/
	background-color: rgb(34,34,34);
	background-repeat: no-repeat;
	background-size: 100% 100%;
	background-position: 0px 0px;
}

.popupImg .innerBox{
	padding:0px;
	position: relative;
	width:100%;
	/*background-color: red;*/
	height:auto;
}

.popupImg .innerBox div {
	/*rgb(0, 171, 230)*/
	display: inline-block;
	border:1px solid #999999;
	padding: 0px 12px 0px 12px;
	margin: 0px 5px 10px 5px;
	height: 23px;
	line-height: 23px;
	-webkit-border-radius: 12px;
	-moz-border-radius: 12px;
	border-radius: 12px;
}

.popupImg .innerBox div a {
	color: #999999;
}

.popupImg .innerBox div:hover {
	border:1px solid rgb(0, 171, 230);
}

.popupImg .innerBox div:hover a {
	color: rgb(0, 171, 230);
}

.popupImg .innerBox div a:hover {
	color: rgb(0, 171, 230);
}

